Scrollbar in modals is now displayed as global; Fixed modal resizing issues that occurred when the tabs were changed; Tabmenus are now as wide as is the parent element;

--- a/sim/src/static/kit/styles.css
+++ b/sim/src/static/kit/styles.css
@@ -454,6 +454,8 @@ html {
 }
 body {
 	display: block;
+	display: inline-block;
+	min-width: 100%;
 	padding: 50px 10px 15px;
 }
 body h1 {
@@ -516,11 +518,6 @@ table {
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	max-width: 99%;
-}
-.modal > div > * {
-	max-width: 100%;
-	overflow: auto;
 }
 .modal:not(.preview) > div > h2 {
 	margin: 5px 0 12px;
@@ -555,6 +552,16 @@ table {
 }
 .modal #modal_req_status {
 	padding: 1px 4px;
+}
+
+/* Always in view */
+.header,
+.always_in_view {
+	max-width: calc(100vw - 50px);
+}
+.modal .header,
+.modal .always_in_view {
+	max-width: calc(100vw - 60px);
 }
 
 .btn,
@@ -851,7 +858,7 @@ a.btn.red {
 	display: block;
 	min-width: 100%;
 	padding: 0;
-	margin: 5px 0 0 0;
+	margin: 5px 0;
 	list-style: none;
 	background: #fcfcfc;
 	border: 1px solid #cccccc;
@@ -1298,7 +1305,7 @@ div.header > div:last-child{
 .submission-info,
 .job-info {
 	display: block;
-	width: 85%;
+	/*width: 85%;*/
 	margin: 5px 8px;
 }
 .modal .submission-info,
